--- a/app/src/app/components/right-screen/right-screen.component.scss
+++ b/app/src/app/components/right-screen/right-screen.component.scss
@@ -3,7 +3,6 @@
   position: absolute;
   inset: 0;
   backface-visibility: hidden;
-  transform: translateZ(1px);
 }
 
 .custom-scrollbar {
